Bug 1538762 - Ensure the Android session store respects the layout scroll range. r=kats a=pascalc

Differential Revision: https://phabricator.services.mozilla.com/D25144